# design_patterns

./: README.md
Creational_Patterns/Python/: setup.cfg
Creational_Patterns/Python/src/abstract_factory/communication/: factories.py  main.py  receivers.py  transmitters.py
inversion_of_control/: .gitignore  LICENSE  README.md  poetry.toml  pyproject.toml
inversion_of_control/assets/: Snaking.json  ZEISS_IoC_Presentations.pptx
inversion_of_control/snaking/: .env.example  app.py  app_config.py
inversion_of_control/snaking/containers/: __init__.py  _config.py  _service.py
inversion_of_control/snaking/controllers/: __init__.py  _dtos.py  _mappers.py  _utils.py
inversion_of_control/snaking/controllers/routers/: _match_maker.py
inversion_of_control/snaking/domain/: entities.py
inversion_of_control/snaking/domain/persistence/: db_adapter.py
inversion_of_control/snaking/domain/service/: match_maker.py
inversion_of_control/snaking/infrastructure/: __init__.py  _fast_api_utils.py
inversion_of_control/snaking/infrastructure/persistence/: __init__.py  _memory_cache.py
inversion_of_control/snaking/service/: python_match_maker.py
inversion_of_control/testing/: conftest.py
inversion_of_control/testing/tests/controller/: test_match_making.py
inversion_of_control/testing/tests/controller/mockeries/: _config.py  conftest.py  consts.py
